--- a/package.json
+++ b/package.json
@@ -25,9 +25,10 @@
         "@angular/platform-browser": "^4.0.0",
         "@angular/platform-browser-dynamic": "^4.0.0",
         "@angular/router": "^4.0.0",
+        "auth0-js": "^8.10.1",
         "core-js": "^2.4.1",
-        "hammerjs": "^2.0.8",
         "gojs": "latest",
+        "hammerjs": "^2.0.8",
         "rxjs": "^5.1.0",
         "zone.js": "^0.8.4"
     },
